--- a/src/app/components/SectionHeader/styles.module.css
+++ b/src/app/components/SectionHeader/styles.module.css
@@ -4,7 +4,7 @@
 }
 
 .white{
-    color: var(--whiteb);
+    color: var(--white);
 }
 
 .blue{
