--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -32,7 +32,7 @@
 
 .section__paragraph{
     font-size: 1.8rem;
-    color:var(--whiteb);
+    color:var(--white);
 }
 
 .section__paragraph span{
